@@ -164,13 +164,13 @@ void CSceneNodeAnimatorCollisionResponse::animateNode(ISceneNode* node, u32 time
 		FirstUpdate = false;
 	}
 
-	const u32 diff = timeMs - LastTime;
+	const f32 diffSec = (f32)(timeMs - LastTime)*0.001f;
 	LastTime = timeMs;
 
 	CollisionResultPosition = Object->getPosition();
 	core::vector3df vel = CollisionResultPosition - LastPosition;
 
-	FallingVelocity += Gravity * (f32)diff * 0.001f;
+	FallingVelocity += Gravity * diffSec;
 
 	CollisionTriangle = RefTriangle;
 	CollisionPoint = core::vector3df();
@@ -188,20 +188,23 @@ void CSceneNodeAnimatorCollisionResponse::animateNode(ISceneNode* node, u32 time
 			= SceneManager->getSceneCollisionManager()->getCollisionResultPosition(
 				World, LastPosition-Translation,
 				Radius, vel, CollisionTriangle, CollisionPoint, f,
-				CollisionNode, SlidingSpeed, FallingVelocity);
+				CollisionNode, SlidingSpeed, FallingVelocity*diffSec);
 
 		CollisionOccurred = (CollisionTriangle != RefTriangle);
 
 		CollisionResultPosition += Translation;
 
-		if (f)//CollisionTriangle == RefTriangle)
+		if ( diffSec > 0 )	// don't change the state when there was no time
 		{
-			Falling = true;
-		}
-		else
-		{
-			Falling = false;
-			FallingVelocity.set(0, 0, 0);
+			if (f)//CollisionTriangle == RefTriangle)
+			{
+				Falling = true;
+			}
+			else
+			{
+				Falling = false;
+				FallingVelocity.set(0, 0, 0);
+			}
 		}
 
 		bool collisionConsumed = false;
@@ -269,7 +272,7 @@ ISceneNodeAnimator* CSceneNodeAnimatorCollisionResponse::createClone(ISceneNode*
 
 	CSceneNodeAnimatorCollisionResponse * newAnimator =
 		new CSceneNodeAnimatorCollisionResponse(newManager, World, Object, Radius,
-				(Gravity * 1000.0f), Translation, SlidingSpeed);
+				Gravity, Translation, SlidingSpeed);
 	newAnimator->cloneMembers(this);
 	return newAnimator;
 }
